--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ sqlparse==0.4.2
 libgravatar==1.0.0
 django-widget-tweaks==1.4.9
 Faker==8.10.3
+humanize==3.12.0
+libgravatar==1.0.0
+python-dateutil==2.8.2
+six==1.16.0
+text-unidecode==1.3
